[gd_scene load_steps=12 format=3 uid="uid://bo4alqq10e4wb"]

[ext_resource type="Script" uid="uid://jk4piq7hpiow" path="res://scripts/game_manager.gd" id="1_dsjwe"]
[ext_resource type="Script" uid="uid://06ac57g80glq" path="res://scripts/flow_field_3d.gd" id="3_7jm3t"]
[ext_resource type="Script" uid="uid://dmmcwcoij4mw6" path="res://scripts/selection_box_ui.gd" id="4_dsjwe"]
[ext_resource type="Material" uid="uid://btcskr40i5w81" path="res://materials/soil.tres" id="5_wvw1b"]
[ext_resource type="PackedScene" uid="uid://df6kql5gmnoa2" path="res://scenes/game_manager.tscn" id="6_aqx2a"]
[ext_resource type="PackedScene" uid="uid://dmf78be6yh1it" path="res://scenes/unit.tscn" id="6_c220y"]
[ext_resource type="PackedScene" uid="uid://kdk0ahmldfkw" path="res://scenes/obstacle.tscn" id="7_aqx2a"]
[ext_resource type="PackedScene" uid="uid://8pik13p682ub" path="res://scenes/environments.tscn" id="8_nr8xu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_aqx2a"]
size = Vector3(1000, 1, 1000)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nr8xu"]

[sub_resource type="PlaneMesh" id="PlaneMesh_q3x8o"]
material = SubResource("StandardMaterial3D_nr8xu")
size = Vector2(1000, 1000)

[node name="RTS" type="Node3D"]
script = ExtResource("1_dsjwe")
unit_scene = ExtResource("6_c220y")
ground_layer = 5
unit_layer = 5
initial_unit_count = 100

[node name="FlowField3D" type="Node3D" parent="."]
script = ExtResource("3_7jm3t")
grid_width = 200
grid_depth = 200

[node name="SelectionUILayer" type="CanvasLayer" parent="."]
visible = false

[node name="SelectionBoxUI" type="Control" parent="SelectionUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_dsjwe")

[node name="GameManager" parent="." instance=ExtResource("6_aqx2a")]

[node name="Obstacle" parent="." instance=ExtResource("7_aqx2a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 42.42417, 0, 18.31829)

[node name="Obstacle" parent="Obstacle" instance=ExtResource("7_aqx2a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28, 0, 43)

[node name="Obstacle2" parent="Obstacle" instance=ExtResource("7_aqx2a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 88, 0, 25)

[node name="Environments" parent="." instance=ExtResource("8_nr8xu")]

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_aqx2a")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
material_override = ExtResource("5_wvw1b")
mesh = SubResource("PlaneMesh_q3x8o")
